--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     </head>
     <body>
         <div class="container">
+            <h3>This is my site</h3>
         </div>
         <script>
         </script>
