--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <div class="container">
-            <h3>This is my site - amitosh</h3>
+            <h3>This is my site - amitosh jain</h3>
         </div>
         <script>
         </script>
